--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,12 @@
 /public/kycdocument
 /public/communitydocument
 /public/postImage
+/public/firebase/fcm.json
 /storage/*.key
 /vendor
+/config/app.php
 .env
+/admin panel/.env
 .env.backup
 .env.production
 .phpunit.result.cache
