--- a/admin panel/src/views/.gitignore
+++ b/admin panel/src/views/.gitignore
@@ -12,9 +12,7 @@
 /public/firebase/fcm.json
 /storage/*.key
 /vendor
-# /config/app.php
-# .env
-# /admin panel/.env
+.env
 .env.backup
 .env.production
 .phpunit.result.cache
